--- a/documentation/demo.ipynb
+++ b/documentation/demo.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "view_img(stat_map_img=nib.Nifti1Image(latent, np.eye(4)), bg_img=False, cmap='gray')\n"
+    "view_img(stat_map_img=nib.Nifti1Image(latent, np.eye(4)), bg_img=False, cmap='gray')"
    ]
   },
   {
@@ -157,7 +157,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2D Demo example\n",
     "view_img(stat_map_img=nib.Nifti1Image(latent, np.eye(4)), bg_img=False, cmap='gray')"
    ]
   }
