--- a/documentation/demo.ipynb
+++ b/documentation/demo.ipynb
@@ -49,7 +49,7 @@
     "# Remove the .cache directory\n",
     "shutil.rmtree(\".cache\")\n",
     "\n",
-    "print(f\"Download completed\")"
+    "print(\"Download completed\")"
    ]
   },
   {
