--- a/documentation/test_finetuned_vae.ipynb
+++ b/documentation/test_finetuned_vae.ipynb
@@ -279,6 +279,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = torch.randn(1, 2, 256, 256).cuda()\n",
+    "with torch.no_grad():\n",
+    "    _ = model(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
